[package]
name = "projet"
version = "0.1.0"
authors = ["exertieb <bastien.exertier@grenoble-inp.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rayon={git="https://github.com/wagnerf42/rayon", branch="tracing"}
rand = "*"
timeit = "*"
fast-tracer={git="https://github.com/wagnerf42/fast-tracer"}
